fix scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,6 +23,6 @@ body{
   
   ::-webkit-scrollbar-thumb {
     /* Customize the scrollbar thumb */
-    background: #464646;
+    background: #1b1b1b;
     border-radius: 10px;
   }
